<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"  >智能平地机</string>
    <string name="app_name_sum"  >AtuoGraderV1.0.0T1</string>
    <string name="Version"  >V1.0.0T1</string>
    <string name="net_ip"  >ip</string>
    <string name="net_port"  >端口</string>
    <string name="accout_username"  >用户名</string>
    <string name="accout_password"  >密码</string>
    <string name="accout_source"  >源节点</string>
    <string name="connect"  >连接</string>
    <string name="break_off"  >断开</string>
    <string name="source_point"  >获取</string>
    <string name="progress_wait"  >正在获取源节点...</string>
    <string name="option"  >提示</string>
    <string name="ok"  >确定</string>
    <string name="oem"  >OEM</string>
    <string name="get_file"  >服务器获取的升级文件为</string>
    <string name="upgrade_sure"  >确定要升级吗?</string>
    <string name="Current_Version"  >当前版本</string>
    <string name="upgrade_choice"  >选择升级方式</string>
    <string name="upgrade_local"  >本地</string>
    <string name="upgrade_network"  >网络</string>
    <string name="ObtainingUpgrade"  >获取中...</string>
    <string name="networkone_error"  >网络获取失败！请保持网络良好再进行尝试！</string>
    <string name="upgradeing_me"  >升级中请耐心等待,升级过程中切记不能断电！</string>
    <string name="fail_upgrade"  >升级失败</string>
    <string name="Successful_upgrade"  >升级成功</string>
    <string name="Successful_upgrade_1"  >升级成功,请重启电源！</string>
    <string name="title_alert"  >提示</string>
    <string name="TimeOutUpgrade"  >网络超时</string>
    <string name="UrlErrorUpgrade"  >更新地址不正确！</string>
    <string name="Faield"  >失败</string>
    <string name="connet_success"  >连接成功</string>
    <string name="connet_fail"  >连接失败</string>
    <string name="FailedUpgrade"  >更新失败！</string>
    <string name="NewEditionUpgrade"  >检测到新版本，立即更新吗?</string>
    <string name="AutoCancleUpgrade"  >更新失败！</string>
    <string name="Upgrade"  >软件版本更新</string>
    <string name="UpGrading"  >正在下载更新...</string>
    <string name="SDcardRequstUpgrade"  >请插入SD卡！</string>
    <string name="CancleUpgrade"  >取消更新</string>
    <string name="RequstUpgrade"  >正在请求更新内容...</string>
    <string name="NetErrorUpgrade"  >网络无法连通</string>
    <string name="DownloadErrorUpgrade"  >下载更新出现异常</string>
    <string name="SuccessUpgrade"  >下载更新成功！</string>
    <string name="CancleAutoUpgrade"  >自动更新已经取消！</string>
    <string name="success"  >成功</string>
    <string name="send"  >发送</string>
    <string name="sendml"  >发送命令</string>
    <string name="mlml"  >默认命令</string>
    <string name="pause"  >暂停</string>
    <string name="scml"  >生成命令</string>
    <string name="goon"  >继续</string>
    <string name="save"  >保存</string>
    <string name="time"  >时间：</string>
    <string name="d"  >到</string>
    <string name="t2_tx"  >串口设置 ：</string>
    <string name="ml_tx"  >命令设置 ：</string>
    <string name="mlset_tx"  >设置默认值</string>
    <string name="verification_hint"  >请输入密码,确定后软件会重启</string>
    <string name="verification_hint1"  >请输入密码</string>
    <string name="null_message_input_vir"  >密码不能为空，请重新输入</string>
    <string name="wrong_message_input_vir"  >您输入的密码不正确，请重新输入</string>
    <string name="zyms">作业管理</string>
    <string name="xtsz">系统设置</string>
    <string name="jzdg">基准定高</string>
    <string name="pdms">平地模式</string>
    <string name="kspd">开始平地</string>
    <string name="jspd">结束平地</string>
    <string name="self_checking">自检</string>
    <string name="title_activity_ntripset">Ntripset</string>
    <string name="diffset_network_setting">网络设置</string>
    <string name="toast_ip_null">ip地址不能为空!</string>
    <string name="toast_port_null">端口不能为空!</string>
    <string name="newbt_tx">新建作业</string>
    <string name="modifybt_tx">修改作业</string>


    <string name="deletebt_tx">删除作业</string>
    <string name="deleteRecord_tx">删除轨迹</string>

    <string name="selectdelete_tx">重置数据</string>
    <string name="selectrecovery_tx">恢复数据</string>
    <string name="selectbt_tx">打开作业</string>
    <string name="daochu_tx">导出</string>
    <string name="daoru_tx">导入作业</string>

    <string name="id_tx">编号</string>

    <string name="jobname_tx">作业名称</string>
    <string name="njkd_tx">农具宽度(米)</string>
    <string name="jjh_tx">交接行</string>
    <string name="njpy_tx">农具偏移</string>
    <string name="njpy_tx_1">农具\n偏移</string>
    <string name="qhpy_tx">前后偏移</string>

    <string name="jylx_tx">作业类型</string>
    <string name="Cover_t_tx">作业亩数</string>
    <string name="height_count_tx">计算高程</string>
    <string name="height_set_tx">设置高程</string>
    <string name="lmd">灵敏度</string>
    <string name="lx">类型:</string>

    <string name="sza">设置A</string>
    <string name="szb">设置B</string>
    <string name="szc">设置C</string>
    <string name="if_reset_database"    >是否重置数据库?</string>
    <string name="if_recover_database"    >是否恢复数据库?</string>
    <string name="JD">经度</string>
    <string name="WD">纬度</string>
    <string name="GC">高程</string>
    <string name="delete"    >删除</string>
    <string name="gjd"    >轨迹点</string>
    <string name="js">计算</string>
    <string name="zylx">作业类型</string>
    <string name="job_name">作业名称</string>
    <string name="job_name_exit">作业名称已存在</string>
    <string name="width_error">请输入农具宽度</string>

    <string name="alert_notice_IsDelete"    >确定要删除吗？</string>
    <string name="mes_6"    >请选择作业</string>
    <string name="mes_5"    >请选择要删除的作业轨迹</string>

    <string name="setmes"    >請輸入信息</string>


    <string name="setmes1"    >最小角度大于最大角度了</string>
    <string name="sta"    >卫星</string>
    <string name="speed"    >速度</string>
    <string name="style"    >模式</string>
    <string name="dsgd"    >地势高度</string>
    <string name="mesg111"    >已点击链接，请耐心等待</string>
    <string name="findnone"    >没有搜索到相关内容</string>
    <string name="openfile"    >打开文件</string>
    <string name="mesg12"    >是否切换为</string>
    <string name="mesg121"    >软件将会重启</string>
    <string name="cssz"    >参数设置</string>
    <string name="sysm"    >使用说明</string>
    <string name="cffs"    >差分方式</string>
    <string name="sbzc"    >设备注册</string>
    <string name="csgx"    >程序更新</string>
    <string name="hfcc"    >恢复出厂</string>
    <string name="yjzxbb"    >已经是最新版本</string>
    <string name="updatemes"    >有新的版本可供更新，是否更新？</string>
    <string name="updatefail"    >下载失败，请重试</string>
    <string name="download1"    >无法恢复下载</string>
    <string name="download2"    >未找到存储设备</string>
    <string name="download3"    >文件已存在</string>
    <string name="download4"    >未知错误</string>
    <string name="czcs"    >控制参数</string>
    <string name="bksz"    >板卡设置</string>
    <string name="cansz"    >can调试</string>
    <string name="kzjd"    >控制精度</string>
    <string name="kzlmd"    >天线到铲刀距离</string>
    <string name="wdcs"    >最高铲刀高度</string>
    <string name="cdsz"    >采点设置</string>
    <string name="ycxz"    >角度1</string>
    <string name="sdwxs"    >角度2</string>
    <string name="hfmrcs"    >恢复默认参数</string>
    <string name="mjgs"    >面积估算(亩)</string>
    <string name="dsgd1"    >地势高度（m）</string>
    <string name="dqgd"    >当前高程（cm）</string>
    <string name="wtz10"    >微调值：1.0cm</string>
    <string name="hfccsz"    >恢复出厂设置</string>
    <string name="yysz"    >语言设置</string>
    <string name="mes55"    >謹慎使用此功能，点击恢复出厂设置按钮后，参数设置、作业数据等将被清除，恢复到系统初始状态.</string>
    <string name="cpxh"    >产品型号:</string>
    <string name="cpmc"    >产品名称:</string>
    <string name="cpmcxt"    >北斗卫星平地系统</string>
    <string name="gsmc"    >公司名称:</string>
    <string name="gsmcxt"    >慧农科技有限公司</string>
    <string name="appversiont"    >APP软件版本:</string>

    <string name="kzqversiont"    >控制器版本:</string>
    <string name="appupdate"    >APP软件升级</string>
    <string name="kjqupdate"    >控制器升级</string>
    <string name="updateper"    >下载进度</string>
    <string name="cancleupdate"    >取消下载</string>
    <string name="mesgii"    >请输入想要搜索的作业名称</string>

    <string name="dt"    >电台</string>
    <string name="qx"    >千寻</string>
    <string name="ntrip"    >Ntrip</string>
    <string name="btl"    >波特率</string>

    <string name="sblx"    >设备类型</string>
    <string name="sbid"    >设备ID</string>

    <string name="filter">过滤</string>
    <string name="cancel_filter">取消过滤</string>
    <string name="hex">0123456789abcdefABCDEF</string>
    <string name="count">次</string>
    <string name="interval">间隔</string>
    <string name="loop">循环</string>
    <string name="save_data">保存数据</string>
    <string name="stop">停止</string>
    <string name="szcg">设置成功</string>
    <string name="szsb">设置失败</string>

    <string name="fssb">發送失败</string>


    <string name="yxnr">請輸入有效的内容</string>
    <string name="zh">帧号:</string>
    <string name="nr">内容:</string>



    <string name="zj">自检</string>
    <string name="error_1">固定解</string>
    <string name="error_2">遥控器</string>
    <string name="error_3">倾角传感器</string>


    <string name="kzmess"  >控制器正在升级,请耐心等待</string>
</resources>